--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 .container {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -28,13 +28,15 @@ th,
 td {
 	text-align: center;
 	vertical-align: middle;
+	min-width: 100px;
     padding: 1.5rem; /* Using rem units for relative sizing */
     background-color: rgba(255,255,255,0.2);
     color: #fff;
 }
 
 th {
-    text-align: left;
+    text-align: center;
+	
 }
 
 thead {
@@ -42,24 +44,23 @@ thead {
         background-color: #55608f;
     }
 }
-
-tbody {
-    tr:hover {
-        background-color: rgba(255,255,255,0.3);
-    }
-    td {
-        position: relative;
-        &:hover {
-            &:before {
-                content: "";
-                position: absolute;
-                left: 0;
-                right: 0;
-                top: -9999px;
-                bottom: -9999px;
-                background-color: rgba(255,255,255,0.2);
-                z-index: -1;
-            }
-        }
-    }
-}
+/* tbody { */
+    /* tr:hover { */
+        /* background-color: rgba(255,255,255,0.3); */
+    /* } */
+    /* td { */
+        /* position: relative; */
+        /* &:hover { */
+            /* &:before { */
+                /* content: ""; */
+                /* position: absolute; */
+                /* left: 0; */
+                /* right: 0; */
+                /* top: -9999px; */
+                /* bottom: -9999px; */
+                /* background-color: rgba(255,255,255,0.2); */
+                /* z-index: -1; */
+            /* } */
+        /* } */
+    /* } */
+/* } */
