--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 table {
-    width: 80%; /* Assuming a maximum width of 80% of the viewport */
+    width: 80%;
     border-collapse: collapse;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
@@ -29,7 +29,7 @@ td {
 	text-align: center;
 	vertical-align: middle;
 	min-width: 100px;
-    padding: 1.5rem; /* Using rem units for relative sizing */
+    padding: 1.5rem;
     background-color: rgba(255,255,255,0.2);
     color: #fff;
 }
@@ -44,23 +44,3 @@ thead {
         background-color: #55608f;
     }
 }
-/* tbody { */
-    /* tr:hover { */
-        /* background-color: rgba(255,255,255,0.3); */
-    /* } */
-    /* td { */
-        /* position: relative; */
-        /* &:hover { */
-            /* &:before { */
-                /* content: ""; */
-                /* position: absolute; */
-                /* left: 0; */
-                /* right: 0; */
-                /* top: -9999px; */
-                /* bottom: -9999px; */
-                /* background-color: rgba(255,255,255,0.2); */
-                /* z-index: -1; */
-            /* } */
-        /* } */
-    /* } */
-/* } */
